@@ -15,7 +15,8 @@
                    js python:here.getUniqueWidgetAttr(fields, 'helper_js');
                    portal portal | context/@@plone_portal_state/portal;
                    disable_column_one python:request.set('disable_plone.leftcolumn',1);
-                   disable_column_two python:request.set('disable_plone.rightcolumn',1);">
+                   disable_column_two python:request.set('disable_plone.rightcolumn',1);
+                   icon_ext view/iconExt">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
       xml:lang="en"
@@ -226,7 +227,11 @@
                                     Rich Label
                                 </div>
                                 <div class="editHook qechild">
-                                    <a title="Edit Field" href="edit" tal:attributes="href string:${field/getName}/edit"><img alt="Edit" src="edit.gif"></a><a title="Delete Field" href="delete_confirmation" tal:attributes="href string:${field/getName}/delete_confirmation"><img alt="Delete" src="delete_icon.gif"></a>
+                                    <a title="Edit Field" href="edit" tal:attributes="href string:${field/getName}/edit"><img alt="Edit" src="edit.gif"
+                                        tal:attributes="src string:${portal_url}/edit.$icon_ext"
+                                        /></a><a title="Delete Field" href="delete_confirmation" tal:attributes="href string:${field/getName}/delete_confirmation"><img alt="Delete" src="delete_icon.gif"
+                                        tal:attributes="src string:${portal_url}/delete_icon.$icon_ext"
+                                        /></a>
                                 </div>
                             </form>
                         </tal:fields>
@@ -262,11 +267,15 @@
                              <a href="#"
                                 tal:attributes="href python:'%s/edit' % row[0]" i18n:attributes="title"
                                 title="Edit Field"
-                                ><img src="edit.gif" alt="Edit" /></a>
+                                ><img src="edit.gif" alt="Edit"
+                                        tal:attributes="src string:${portal_url}/edit.$icon_ext"
+                                /></a>
                             <a href="#"
                                tal:attributes="href python:'%s/delete_confirmation' % row[0]"
                                title="Delete Action" i18n:attributes="title"
-                               ><img src="delete_icon.gif" alt="Delete" /></a>
+                               ><img src="delete_icon.gif" alt="Delete"
+                                        tal:attributes="src string:${portal_url}/delete_icon.$icon_ext"
+                               /></a>
                             </div>
                         </div>
                     </tal:block>
@@ -298,13 +307,17 @@
                            <a href="#" tal:condition="python:row[0]"
                               tal:attributes="href python:'%s/edit' % row[0]"
                               title="Edit Page"
-                              ><img src="edit.gif" alt="Edit" /></a>
+                              ><img src="edit.gif" alt="Edit"
+                                        tal:attributes="src string:${portal_url}/edit.$icon_ext"
+                              /></a>
                           <tal:block tal:condition="python:not row[0]">&nbsp;</tal:block>
 
                             <a href="#" tal:condition="python:row[0]"
                                tal:attributes="href python:'%s/delete_confirmation' % row[0]"
                                title="Delete Page"
-                               ><img src="delete_icon.gif" alt="Delete" /></a>
+                               ><img src="delete_icon.gif" alt="Delete"
+                                        tal:attributes="src string:${portal_url}/delete_icon.$icon_ext"
+                               /></a>
                             <tal:block tal:condition="python:not row[0]">&nbsp;</tal:block>
                         </td>
                     </tr>
